<resources>
    <string name="app_name">FisiApp</string>
    <string name="title_home">Home</string>
    <string name="title_exam">Exams</string>
    <string name="title_activity_conversions">ConversionsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="texto_pixabay">PixaBay</string>
    <string name="version_app">Version 1.0</string>
    <string name="creditos_img_and_icons">Icons and images:</string>
    <string name="vector_maker" translatable="false">Vector Maker</string>
    <string name="smashicons" translatable="false">Smashicons</string>
    <string name="freepik" translatable="false">Freepik</string>
    <string name="roundicons" translatable="false">Roundicons</string>
    <string name="pixel_buddha" translatable="false">Pixel Buddha</string>
    <string name="developers">Developers:</string>
    <string name="jose_manuel_couti_o_vazques">Jose Manuel Coutiño Vazques</string>
    <string name="cesar_uriel_coto_coazozon">Cesar Uriel Coto Coazozon</string>
    <string name="cetis_82">CETis 82</string>
    <string name="miguel_hidalgo_y_costilla">Miguel Hidalgo y Costilla</string>
    <string name="conversions_title">Conversions</string>
    <string name="vectors_title">Vectors</string>
    <string name="magnitudes_title">Magnitudes</string>
    <string name="ley_inercia_title">Law of inertia</string>
    <string name="segunda_ley_title">Fundamental law of dynamics</string>
    <string name="tercera_ley_title">Principle of action and reaction</string>
    <string name="conversion_exam_title">Conversion exam</string>
    <string name="theoric_exam_title">Theoric exam</string>
    <string name="practical_test_title">Practical test</string>
    <string name="vector_exam_title">Vector exam</string>
    <string name="magnitudes_exam_title">Magnitudes exam</string>
    <string name="newton_s_law_exam_title">Newton\'s Law Exam</string>
    <string name="examples_title">Examples</string>
    <string name="exercises_title">Exercises</string>
    <string name="more_title">More</string>
    <string name="books_title">Books</string>
    <string name="tutorials_title">Tutorials</string>
    <string name="no_hay_conexcion">There is no internet connection at this time</string>
    <string name="visit_our_blog">Visit our blog</string>
    <string name="feedback_title">Feedback</string>
    <string name="help_text">Help?</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="acessor_title">Assessor</string>
    <string name="acesor_name" translatable="false">Hector Enrique Perez Alonzo</string>
    <string name="manuel_de_jesus_couti_o_vazques" translatable="false">Manuel de Jesus Coutiño Vazques</string>
    <string name="pregunta_uno_vectores_teorico">Is every vector one?</string>
    <string name="respuesta1_pregunta1_examteorico_vectores">Physical magnitude</string>
    <string name="respuesta2_pregunta1_examteorico_vectores">Vector magnitude</string>
    <string name="respuesta3_pregunta1_examteorico_vectores">Scalar magnitude</string>
    <string name="pregunta_dos_vectores_teorico">The measure of the vector, is it called?</string>
    <string name="respuesta1_pregunta2_examteorico_vectores">Sense</string>
    <string name="respuesta2_pregunta2_examteorico_vectores">Origin</string>
    <string name="respuesta3_pregunta2_examteorico_vectores">Magnitude</string>
    <string name="pregunta_tres_vectores_teorico">In vectors, is it called address a?</string>
    <string name="respuesta1_pregunta3_examteorico_vectores">To the arrow of it</string>
    <string name="respuesta2_pregunta3_examteorico_vectores">To the inclination of application of the same</string>
    <string name="respuesta3_pregunta3_examteorico_vectores">To the meaning of it</string>
    <string name="pregunta_cuatro_vectores_teorico">Is the sense of the vector indicated by?</string>
    <string name="respuesta1_pregunta4_examteorico_vectores">The sense</string>
    <string name="respuesta2_pregunta4_examteorico_vectores">The arrow</string>
    <string name="respuesta3_pregunta4_examteorico_vectores">Its magnitude</string>
    <string name="pregunta_cinco_vectores_teorico">Are the vector magnitudes defined by?</string>
    <string name="respuesta1_pregunta5_examteorico_vectores">A number and a quantity</string>
    <string name="respuesta2_pregunta5_examteorico_vectores">A number, a quantity and a sense</string>
    <string name="respuesta3_pregunta5_examteorico_vectores">A number, a quantity, a sense and an address.</string>
    <string name="pregunta_seis_vectores_teorico">Is a vector a physical quantity that it has?</string>
    <string name="respuesta1_pregunta6_examteorico_vectores">Displacement</string>
    <string name="respuesta2_pregunta6_examteorico_vectores">Acceleration</string>
    <string name="respuesta3_pregunta6_examteorico_vectores">Speed</string>
    <string name="respuesta4_pregunta6_examteorico_vectores">Sense and Magnitude</string>
    <string name="pregunta_siete_vectores_teorico">A parallel vector?</string>
    <string name="respuesta1_pregunta7_examteorico_vectores">It has its parallel lines of action</string>
    <string name="respuesta2_pregunta7_examteorico_vectores">It has its lines of action in the same sense</string>
    <string name="respuesta3_pregunta7_examteorico_vectores">It has no lines of action</string>
    <string name="respuesta4_pregunta7_examteorico_vectores">Its lines of action do not change direction</string>
    <string name="pregunta_ocho_vectores_teorico">Are the vectors A and B the same?</string>
    <string name="respuesta1_pregunta8_examteorico_vectores">They have the same address</string>
    <string name="respuesta2_pregunta8_examteorico_vectores">They have the same origin and same address</string>
    <string name="respuesta3_pregunta8_examteorico_vectores">They start from the same origin, but change their address</string>
    <string name="respuesta4_pregunta8_examteorico_vectores">They start from the same origin and have different lengths</string>
    <string name="pregunta_nueve_vectores_teorico">Is there a change in magnitude and direction?</string>
    <string name="respuesta1_pregunta9_examteorico_vectores">Product of two vectors</string>
    <string name="respuesta2_pregunta9_examteorico_vectores">Product of a vector and a scalar</string>
    <string name="respuesta3_pregunta9_examteorico_vectores">Product of two scalars</string>
    <string name="respuesta4_pregunta9_examteorico_vectores">Product of two vectors and a scalar</string>
    <string name="pregunta_diez_vectores_teorico">Is the graphic representation of a vector given by?</string>
    <string name="respuesta1_pregunta10_examteorico_vectores">Line segment that has address.</string>
    <string name="respuesta2_pregunta10_examteorico_vectores">It is identified with uppercase letters at the ends.</string>
    <string name="respuesta3_pregunta10_examteorico_vectores">It participates as an axis in a Cartesian plane.</string>
    <string name="respuesta4_pregunta10_examteorico_vectores">Part of an origin finding an image that unites them.</string>
    <string name="pregunta_uno_magnitudes_teorico">The unit of mass in the International System is</string>
    <string name="respuesta1_pregunta1_examteorico_magnitudes">Gram</string>
    <string name="respuesta2_pregunta1_examteorico_magnitudes">Ton</string>
    <string name="respuesta3_pregunta1_examteorico_magnitudes">Kilogramo</string>
    <string name="pregunta_dos_magnitudes_teorico">If we measure the height of a person, the magnitude we are measuring is called length:</string>
    <string name="pregunta_tres_magnitudes_teorico">Indicate which of these belongs to the international system unit:</string>
    <string name="respuesta1_pregunta3_examteorico_magnitudes">Celsius degrees</string>
    <string name="respuesta2_pregunta3_examteorico_magnitudes">Mol</string>
    <string name="respuesta3_pregunta3_examteorico_magnitudes">Hour</string>
    <string name="pregunta_cuatro_magnitudes_teorico">The surface is a fundamental quantity</string>
    <string name="pregunta_cinco_magnitudes_teorico">Magnitude is everything that can be measured:</string>
    <string name="pregunta_seis_magnitudes_teorico">Select the derived magnitude:</string>
    <string name="respuesta1_pregunta6_examteorico_magnitudes">Volume</string>
    <string name="respuesta2_pregunta6_examteorico_magnitudes">Mass</string>
    <string name="respuesta3_pregunta6_examteorico_magnitudes">Time</string>
    <string name="respuesta4_pregunta6_examteorico_magnitudes">Length</string>
    <string name="pregunta_siete_magnitudes_teorico">Which of the following statements is NOT true?</string>
    <string name="respuesta1_pregunta7_examteorico_magnitudes">Mass and time are fundamental magnitudes.</string>
    <string name="respuesta2_pregunta7_examteorico_magnitudes">The volume is a fundamental quantity</string>
    <string name="respuesta3_pregunta7_examteorico_magnitudes">Speed is a derived quantity.</string>
    <string name="respuesta4_pregunta7_examteorico_magnitudes">The derived quantities are obtained from the fundamental quantities.</string>
    <string name="pregunta_ocho_magnitudes_teorico">The unit of length in the International system is:</string>
    <string name="respuesta1_pregunta8_examteorico_magnitudes">Meter</string>
    <string name="respuesta2_pregunta8_examteorico_magnitudes">The kilometer</string>
    <string name="respuesta3_pregunta8_examteorico_magnitudes">The mile</string>
    <string name="respuesta4_pregunta8_examteorico_magnitudes">The centimeter</string>
    <string name="pregunta_nueve_magnitudes_teorico">The units of the International System are:</string>
    <string name="respuesta1_pregunta9_examteorico_magnitudes">Meter, Kilogram, minute</string>
    <string name="respuesta2_pregunta9_examteorico_magnitudes">Centimeter, gram, second</string>
    <string name="respuesta3_pregunta9_examteorico_magnitudes">Meter, gram, second</string>
    <string name="respuesta4_pregunta9_examteorico_magnitudes">Meter, Kilogram, second</string>
    <string name="pregunta_diez_magnitudes_teorico">The scalar quantity is:</string>
    <string name="respuesta1_pregunta10_examteorico_magnitudes">Speed</string>
    <string name="respuesta2_pregunta10_examteorico_magnitudes">Time</string>
    <string name="respuesta3_pregunta10_examteorico_magnitudes">The force</string>
    <string name="suma_vectores">Sum of vectores</string>
    <string name="title_home_vectores_que_es">Introduction to vectors</string>
    <string name="title_home_vectores_titulo1">Vectors in a Cartesian plane</string>
    <string name="title_home_vectores_titulo2">Vector Operative</string>
    <string name="formula1">a = Fr/m</string>
    <string name="datos">Data</string>
    <string name="p_10n">P = 10N</string>
    <string name="f_12n">f = 12N</string>
    <string name="a">a = ?</string>
    <string name="procedimiento">Process</string>
    <string name="convertir_peso_a_masa">Convert weight to mass</string>
    <string name="prosedimiento_new">m = p/g = 10N/9.8 = 1.02kg</string>
    <string name="con_la_formula_optenida_new">With the obtained mass the values are changed in the formula a = fr / m</string>
    <string name="respuesta_ejemplo_new">a = fr/m = 12/1.02 = 11.76m/s²</string>
    <string name="a_0_5m_s">a = 0.5m/s²</string>
    <string name="p_50n">p = 50N</string>
    <string name="t_no">T = ?</string>
    <string name="formula_8_segundaley">T = p-ma</string>
    <string name="respuesta_segunda_ley">T = 50N-(5.1kg)(0.5m/s²)</string>
    <string name="rescpuesta_corec_segunda_ley">T = 50N-2.55 = 47.45N</string>
    <string name="formulas">Formulas</string>
    <string name="formula3">m = p/g</string>
</resources>