<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bagcolor"
    tools:context="com.robot.maker.proyecto.EjerciciosDePrimeaLeyFragment">

    <!-- This code was made by Cesar Uriel Coto Coazozon and the help of Jose Manuel Coutiño Vazques -->

    <LinearLayout
        style="@style/linearLayoutActivities"
        android:id="@+id/contenedor_inicio_primera_ley_actividadconversiones">


        <android.support.v7.widget.CardView
            style="@style/cardViewActivities">

            <LinearLayout
                style="@style/linearLayoutActivities">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:src="@drawable/ejemdos" />

                <TextView
                    style="@style/textViewTitleExampleActivities"
                    android:text="@string/datos" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/p_10n"/>

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/f_12n" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/a" />

                <TextView
                    style="@style/textViewTitleExampleActivities"
                    android:text="@string/formulas" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/formula3" />

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/formula1" />

                <TextView
                    style="@style/textViewTitleExampleActivities"
                    android:text="@string/procedimiento" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/convertir_peso_a_masa"
                    android:textStyle="italic" />

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/prosedimiento_new"/>

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/con_la_formula_optenida_new"
                    android:textStyle="italic" />

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/respuesta_ejemplo_new" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
