<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bagcolor"
    tools:context="com.robot.maker.proyecto.ExamplesSegundaLeyFragment">

    <!-- This code was made by Cesar Uriel Coto Coazozon and the help of Jose Manuel Coutiño Vazques -->

    <LinearLayout
        style="@style/linearLayoutActivities"
        android:id="@+id/contenedor_inicio_primera_ley_actividadconversiones">


        <android.support.v7.widget.CardView
            style="@style/cardViewActivities">

            <LinearLayout
                style="@style/linearLayoutActivities">


                <TextView
                    style="@style/textViewTitleExampleActivities"
                    android:text="@string/datos" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/a_0_5m_s" />

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/p_50n" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/t_no" />

                <TextView
                    style="@style/textViewTitleExampleActivities"
                    android:text="@string/formulas" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/formula_8_segundaley" />

                <TextView
                    style="@style/textViewTitleExampleActivities"
                    android:text="@string/procedimiento" />


                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/respuesta_segunda_ley"
                    android:textStyle="italic" />

                <TextView
                    style="@style/textViewContenidoExampleActivities"
                    android:text="@string/rescpuesta_corec_segunda_ley" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>


</ScrollView>
