<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio_conversiones"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_ejemplos_conversiones"
            android:icon="@drawable/ic_examples_black_24dp"
            android:title="@string/examples_title" />
        <item
            android:id="@+id/nav_exercises_conversiones"
            android:icon="@drawable/ic_exercises_black_24dp"
            android:title="@string/exercises_title" />
    </group>

    <item android:title="@string/more_title">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/feedback_title"
                android:icon="@drawable/ic_feedback_black_24dp"/>
        </menu>
    </item>

</menu>
