<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robot.maker.proyecto.ExamTeoricVectorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_8dp">


        <TextView
            android:id="@+id/textView_acvectorespregunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregunta_uno_vectores_teorico"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_respuesta1_pregunta1_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta1_pregunta1_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta2_pregunta1_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta2_pregunta1_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta3_pregunta1_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta3_pregunta1_examteorico_vectores" />
        </RadioGroup>

        <!--PREGUNTA 2-->
        <TextView
            android:layout_marginTop="@dimen/dimen_padding_16dp"
            android:id="@+id/textView_acvectorespregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregunta_dos_vectores_teorico"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_respuesta1_pregunta2_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta1_pregunta2_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta2_pregunta2_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta2_pregunta2_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta3_pregunta2_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta3_pregunta2_examteorico_vectores" />
        </RadioGroup>
        <!--PREGUNTA 3-->
        <TextView
            android:layout_marginTop="@dimen/dimen_padding_16dp"
            android:id="@+id/textView_acvectorespregunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregunta_tres_vectores_teorico"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_respuesta1_pregunta3_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta1_pregunta3_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta2_pregunta3_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta2_pregunta3_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta3_pregunta3_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta3_pregunta3_examteorico_vectores" />
        </RadioGroup>
        <!--PREGUNTA 4-->
        <TextView
            android:layout_marginTop="@dimen/dimen_padding_16dp"
            android:id="@+id/textView_acvectorespregunta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregunta_cuatro_vectores_teorico"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_respuesta1_pregunta4_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta1_pregunta4_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta2_pregunta4_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta2_pregunta4_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta3_pregunta4_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta3_pregunta4_examteorico_vectores" />
        </RadioGroup>
        <!--PREGUNTA 5-->
        <TextView
            android:layout_marginTop="@dimen/dimen_padding_16dp"
            android:id="@+id/textView_acvectorespregunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregunta_cinco_vectores_teorico"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_respuesta1_pregunta5_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta1_pregunta5_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta2_pregunta5_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta2_pregunta5_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta3_pregunta5_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta3_pregunta5_examteorico_vectores" />
        </RadioGroup>
        <!--PREGUNTA 6-->
        <TextView
        android:layout_marginTop="@dimen/dimen_padding_16dp"
        android:id="@+id/textView_acvectorespregunta6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pregunta_seis_vectores_teorico"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_respuesta1_pregunta6_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta1_pregunta6_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta2_pregunta6_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta2_pregunta6_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta3_pregunta6_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta3_pregunta6_examteorico_vectores" />

            <RadioButton
                android:id="@+id/radioButton_respuesta4_pregunta6_exam_teorico_vectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/respuesta4_pregunta6_examteorico_vectores"/>
        </RadioGroup>
    </LinearLayout>

</ScrollView>
