<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/backgroundActivvity"
    tools:context="com.robot.maker.proyecto.InicioVectoresFragment">
    <!-- This code was made by Cesar Uriel Coto Coazozon and the help of Jose Manuel Coutiño Vazques -->
    <LinearLayout
        style="@style/linearLayoutActivities"
        android:id="@+id/contenedor_inicio_vectores_actividadconversiones">


        <android.support.v7.widget.CardView
           style="@style/cardViewActivities">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/title_home_vectores_que_es"
                    style="@style/textViewTitleExampleActivities"/>

                <WebView
                    android:id="@+id/texto_home_vectores_parrafo1"
                    style="@style/webViewContenido">

                </WebView>


                <ImageView
                    style="@style/imageContenido"
                    android:src="@drawable/vectorescarac" />


                <TextView
                    android:text="@string/title_home_vectores_titulo1"
                    style="@style/textViewTitleExampleActivities"/>

                <WebView
                    android:id="@+id/texto_home_vectores_parrafo2"
                    style="@style/webViewContenido">
                </WebView>

                <ImageView
                    style="@style/imageContenido"
                    android:src="@drawable/vectorenplanocartesiano" />

                <WebView
                    style="@style/webViewContenido"
                    android:id="@+id/texto_home_vectores_parrafo3">

                </WebView>
                <TextView
                    android:text="@string/title_home_vectores_titulo2"
                    style="@style/textViewTitleExampleActivities"/>

                <WebView
                    android:id="@+id/texto_home_vectores_parrafo4"
                    style="@style/webViewContenido">
                </WebView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
